--- a/index.html
+++ b/index.html
@@ -220,7 +220,15 @@ If you are coming from Long Island MacArthur Airport then follow Arrival Ave and
  
 }
 }
- </script></head><body>        <script type="text/javascript">
+ </script></head><body>
+   <div style="text-align: center;">
+        <a href="./iPhonecrackscreenrepairinBohemia.html">iPhone cracked screen repair in Bohemia</a>&nbsp&nbsp
+        <a href="./iPadcrackedscreenrepairinBohemia.html">iPad cracked screen repair in Bohemia</a>&nbsp&nbsp
+        <a href="./LaptopcrackscreenrepairinBohemia.html">Laptop cracked screen repair in Bohemia</a>&nbsp&nbsp
+
+        <a href="./CellphonecrackscreenrepairinBohemia.html">Cellphone cracked screen repair in Bohemia</a>
+    </div><br/>
+  <script type="text/javascript">
     		  function openWindow(event) {
             // Show the popup
             var my_window;
